<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        android:background="@color/white"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/top_layout"/>

    <TextView
        android:id="@+id/welcome_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:text="@string/HEADING"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:layout_below="@id/top_layout"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#1E88E5"
        android:layout_marginEnd="80dp"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/group_radio"
        android:layout_below="@id/welcome_Text">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/CHOOSESUB"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#1E88E5"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:padding="5dp"/>
        <RadioButton android:id="@+id/radioButton_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/KRISHI"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#1E88E5"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="7dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radioButton_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PASHUPALAN"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#1E88E5"
            android:layout_marginTop="8dp"
            android:padding="7dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="false"
        android:padding="8dp"
        android:background="#D2008705"
        android:id="@+id/top_layout">
        <ImageButton
            android:id="@+id/refreshBtn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/rounded_corner"
            android:src="@drawable/baseline_refresh_24"
            android:contentDescription="reload" />
        <ImageButton
            android:id="@+id/lang_Btn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corner"
            android:src="@drawable/baseline_language_24"
            android:layout_toStartOf="@id/refreshBtn"/>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo1"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginTop="7dp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/logo"
            android:paddingLeft="8dp"
            android:text="@string/CHATHEADING"
            android:textColor="@color/white"
            android:textSize="17dp"/>

    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:background="#D2008705"
        android:id="@+id/bottom_layout">



        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:gravity="left"
            android:background="@drawable/rounded_corner"
            android:hint="Write here "
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@id/iv_mic"
            android:textColor="@color/black"
            android:padding="5dp" />

        <ImageButton
            android:id="@+id/send_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/rounded_corner"
            android:padding="6dp"
            android:src="@drawable/baseline_send_24" />

        <ImageView
            android:id="@+id/iv_mic"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:src="@drawable/mic1"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounded_corner"
            android:layout_toLeftOf="@id/send_btn"/>

    </RelativeLayout>

</RelativeLayout>
